--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Application1</string>
+    <string name="hello_world">你好世界</string>
+    <string name="hello_world2">你好2人世界</string>
 </resources>
